--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
     <title>Recurser Locations</title>
+    <base href="./">
     <!-- Normalize -->
     <meta name="viewport" content="width=device-width initial-scale=1" />
+    <link href="{{ url_for('static', filename='css/app.css') }}" rel="stylesheet">
 </head>
 <body>
   <div>Hello world</div>
   <div>{{ user }}</div>
+  <app>Loading...</app>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/common.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/vendor.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
