--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -2,20 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
-    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
     <title>Recurser Locations</title>
     <base href="./">
     <!-- Normalize -->
     <meta name="viewport" content="width=device-width initial-scale=1" />
-    <link href="{{ url_for('static', filename='css/app.css') }}" rel="stylesheet">
-</head>
-<body>
-  <div>Hello world</div>
-  <div>{{ user }}</div>
-  <app>Loading...</app>
-  <script type="text/javascript" src="{{ url_for('static', filename='js/common.js') }}"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename='js/vendor.js') }}"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
-</body>
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+  </head>
+  <body>
+    <div>{{ user }}</div>
+    <div id="root">Loading...</div>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
+  </body>
 </html>
